--- a/main/http_server/axe-os/src/app/components/autospeed/autospeed.component.html
+++ b/main/http_server/axe-os/src/app/components/autospeed/autospeed.component.html
@@ -14,7 +14,7 @@
                 <div class="col-12 md:col-10">
                     <input pInputText id="powerlow" type="number" formControlName="powerlow" />
                     <div>
-                        <small>Power level below which hash freq can be increased</small>
+                        <small>Power level below which hash freq can be increased [0-50]</small>
                     </div>
                 </div>
             </div>
@@ -23,7 +23,7 @@
                 <div class="col-12 md:col-10">
                     <input pInputText id="powerhigh" type="number" formControlName="powerhigh" />
                     <div>
-                        <small>Power level above which hash freq will be deccreased</small>
+                        <small>Power level above which hash freq will be deccreased [0-50]</small>
                     </div>
                 </div>
             </div>
@@ -32,7 +32,7 @@
                 <div class="col-12 md:col-10">
                     <input pInputText id="asicvolthigh" type="number" formControlName="asicvolthigh" />
                     <div>
-                        <small>ASIC Voltage above which hash freq can be increased</small>
+                        <small>ASIC Voltage above which hash freq can be increased [1000-1500]</small>
                     </div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
                 <div class="col-12 md:col-10">
                     <input pInputText id="asicvoltlow" type="number" formControlName="asicvoltlow" />
                     <div>
-                        <small>ASIC Voltage below which hash freq will be deccreased</small>
+                        <small>ASIC Voltage below which hash freq will be deccreased [1000-1500]</small>
                     </div>
                 </div>
             </div>            
@@ -50,7 +50,7 @@
                 <div class="col-12 md:col-10">
                     <input pInputText id="asictemplow" type="number" formControlName="asictemplow" />
                     <div>
-                        <small>ASIC temperature below which hash freq can be increased</small>
+                        <small>ASIC temperature below which hash freq can be increased [30-90]</small>
                     </div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                 <div class="col-12 md:col-10">
                     <input pInputText id="asictemphigh" type="number" formControlName="asictemphigh" />
                     <div>
-                        <small>ASIC Temperature above which hash freq will be deccreased</small>
+                        <small>ASIC Temperature above which hash freq will be deccreased [30-90]</small>
                     </div>
                 </div>
             </div>            
@@ -68,7 +68,7 @@
                 <div class="col-12 md:col-10">
                     <input pInputText id="vrtemplow" type="number" formControlName="vrtemplow" />
                     <div>
-                        <small>Voltage regulator temperature below which hash freq can be increased</small>
+                        <small>Voltage regulator temperature below which hash freq can be increased [30-120]</small>
                     </div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                 <div class="col-12 md:col-10">
                     <input pInputText id="vrtemphigh" type="number" formControlName="vrtemphigh" />
                     <div>
-                        <small>Voltage regulator temperature above which hash freq will be deccreased</small>
+                        <small>Voltage regulator temperature above which hash freq will be deccreased [30-120]</small>
                     </div>
                 </div>
             </div>            
@@ -86,7 +86,7 @@
                 <div class="col-12 md:col-10">
                     <input pInputText id="hashlow" type="number" formControlName="hashlow" />
                     <div>
-                        <small>Lowest value hash freq can be set to</small>
+                        <small>Lowest value hash freq can be set to [50-1000]</small>
                     </div>
                 </div>
             </div>
@@ -95,7 +95,7 @@
                 <div class="col-12 md:col-10">
                     <input pInputText id="hashhigh" type="number" formControlName="hashhigh" />
                     <div>
-                        <small>Highest value hash freq can be set to</small>
+                        <small>Highest value hash freq can be set to [50-1000]</small>
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                 <div class="col-12 md:col-10">
                     <input pInputText id="fantarget" type="number" formControlName="fantarget" />
                     <div>
-                        <small>Target fan speed at ASIC low temperature</small>
+                        <small>Target fan speed at ASIC low temperature [50-95]</small>
                     </div>
                 </div>
             </div>
